--- a/NongSanShop/Views/Home/Index.cshtml
+++ b/NongSanShop/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@using NongSanShop.Models
 @model dynamic
-
+@using NongSanShop.Common
+@using NongSanShop.Models.Custom
 @{
     ViewBag.Title = "Trang chủ";
 }
@@ -132,8 +133,8 @@
                         </a>
                         <p class="price">Chỉ từ: @item.price VND</p>
                         <div>
-                            <a class="view-link shutter" href="#">
-                                <i class="fa fa-plus-circle"></i>Add To Cart
+                            <a class="view-link shutter" href="@Url.Action("create", "UserCart", new { id = item.id, userId = ((AppUser)Session[Constants.SessionItem.User]).UserId)})">
+                                <i class="fa fa-plus-circle"></i>Thêm vào giỏ hàng
                             </a>
                         </div>
                     </div>	<!-- End of /.products -->
