--- a/NongSanShop/Views/Blog/Index.cshtml
+++ b/NongSanShop/Views/Blog/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@using NongSanShop.Common
-@model IEnumerable<NongSanShop.Models.dh_blog>
+@model PagedList.IPagedList<NongSanShop.Models.dh_blog>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 @{
     ViewBag.Title = "Bài viết";
@@ -106,7 +108,7 @@
                 <div class="col-md-6 align-self-center">
                     <p id="dataTable_info" class="dataTables_info" role="status" aria-live="polite">Showing 1 to 10 of 27</p>
                 </div>
-                <div class="col-md-6">
+                @*<div class="col-md-6">
                     <nav class="d-lg-flex justify-content-lg-end dataTables_paginate paging_simple_numbers">
                         <ul class="pagination">
                             <li class="page-item disabled"><a class="page-link" href="#" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
@@ -116,8 +118,11 @@
                             <li class="page-item"><a class="page-link" href="#" aria-label="Next"><span aria-hidden="true">»</span></a></li>
                         </ul>
                     </nav>
-                </div>
+                </div>*@
             </div>
         </div>
     </div>
+    <br />
+    Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount
+    @Html.PagedListPager(Model, page => Url.Action("Display", new { page }))
 </div>
