--- a/NongSanShop/Views/UserCart/Index.cshtml
+++ b/NongSanShop/Views/UserCart/Index.cshtml
@@ -6,9 +6,6 @@
 }
 
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <div class="container">
     <h4>Giỏ hàng của bạn</h4>
     <table class="table">
@@ -27,32 +24,36 @@
             </th>
             <th></th>
         </tr>
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.dh_product.name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.quantity)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.price)
-            </td>
-            <td>
-                @{ 
-                    double gia = Convert.ToDouble(item.price);
-                    int sl = Convert.ToInt32(item.quantity);
-                    double tong = gia * sl;
-                 }
-                @tong
-            </td>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.dh_product.name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.quantity)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.price)
+                </td>
+                <td>
+                    @{
+                        double gia = Convert.ToDouble(item.price);
+                        int sl = Convert.ToInt32(item.quantity);
+                        double tong = gia * sl;
+                    }
+                    @tong
+                </td>
 
-            <td>
-                @Html.ActionLink("Sửa", "Edit", new { id=item.id }) |
-                @*@Html.ActionLink("Chi tiết", "Details", new { id=item.id }) |*@
-                @Html.ActionLink("Xóa", "Delete", new { id=item.id })
-            </td>
-        </tr>
-    }
+                <td>
+                    @Html.ActionLink("Sửa", "Edit", new {id = item.id}) |
+                    @*@Html.ActionLink("Chi tiết", "Details", new { id=item.id }) |*@
+                    @Html.ActionLink("Xóa", "Delete", new {id = item.id})
+                </td>
+            </tr>
+        }
     </table>
+    <div style="width:100%;display:flex;justify-content: flex-end;">
+        <a href="@Url.Action("Index", "Checkout", null)" class="btn btn-primary" style="margin:10px 0;">Thanh toán</a>
+    </div>
 </div>
