--- a/NongSanShop/Views/Product/Index.cshtml
+++ b/NongSanShop/Views/Product/Index.cshtml
@@ -184,5 +184,5 @@
     </div>
     <br />
     Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount
-    @Html.PagedListPager(Model, page => Url.Action("Display", new { page }))
+    @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
 </div>
