--- a/NongSanShop/Views/Order/Index.cshtml
+++ b/NongSanShop/Views/Order/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@using NongSanShop.Common
-@model IEnumerable<NongSanShop.Models.dh_order>
+@model PagedList.IPagedList<NongSanShop.Models.dh_order>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 @{
     ViewBag.Title = "Index";
@@ -10,11 +12,6 @@
 <div class="container-fluid">
     <h3 class="text-dark mb-4">Đơn hàng</h3>
     <div class="card shadow">
-        <div class="card-header py-3">
-            <p class="text-primary m-0 font-weight-bold">
-                @Html.ActionLink("Thêm mới", "Create")
-            </p>
-        </div>
         <div class="card-body">
             <div class="row">
                 <div class="col-md-6 text-nowrap">
@@ -157,23 +154,11 @@
                     </tfoot>
                 </table>
             </div>
-            <div class="row">
-                <div class="col-md-6 align-self-center">
-                    <p id="dataTable_info" class="dataTables_info" role="status" aria-live="polite">Showing 1 to 10 of 27</p>
-                </div>
-                <div class="col-md-6">
-                    <nav class="d-lg-flex justify-content-lg-end dataTables_paginate paging_simple_numbers">
-                        <ul class="pagination">
-                            <li class="page-item disabled"><a class="page-link" href="#" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
-                            <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                            <li class="page-item"><a class="page-link" href="#" aria-label="Next"><span aria-hidden="true">»</span></a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
+
         </div>
     </div>
+    <br />
+    Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount
+    @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
 </div>
 
