fix - resolve no view, missing closing tag div

--- a/NongSanShop/Views/Home/Store.cshtml
+++ b/NongSanShop/Views/Home/Store.cshtml
@@ -153,4 +153,5 @@
 
             </div>	<!-- End of /.row -->
         </div>	<!-- End of /.container -->
+    </div>
 </section>	<!-- End of Section -->
